prusti-tests/tests/parse/ui/closures_fail-2.stderr
error: closure must specify return type
  --> $DIR/closures_fail-2.rs:11:13
   |
11 |       let f = closure!(
   |  _____________^
12 | |         requires(i >= 0),
13 | |         ensures(result == i + 1),
14 | |         |i: i32| i + 1
15 | |     );
   | |_____^
   |
   = note: this error originates in the macro `closure` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

